src/test/deca/context/valid/homemade/test/test29_param_void.deca
// test valide de la règle 2.9


class A {
    int value(float x){}
    boolean name(int ent, int virg){}
}