src/test/deca/context/invalid/homemade/tests/test27_redefinition_method/test27_redefinition_method1.deca
// test invalide de la règle 2.7

class B {
    int val(float x){}
}
class A extends B {
    int val(int x){}
}